--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
 
             @foreach (var item in Model)
             {
-                <div class="col-md-4 col-lg-3 mb-4">
+                <div class="col-md-4 mb-4">
                     <partial name="_ProductBox" model="@item"></partial>
 
                 </div>
