--- a/Views/Home/ShowCart.cshtml
+++ b/Views/Home/ShowCart.cshtml
@@ -13,6 +13,7 @@
             <th>Item</th>
             <th>Quantity</th>
             <th>Price</th>
+            <th>Remove</th>
         </tr>
     </thead>
 
