--- a/Views/Product/ShowGroupProducts.cshtml
+++ b/Views/Product/ShowGroupProducts.cshtml
@@ -3,18 +3,22 @@
     ViewData["Title"] = "ShowGroupProducts";
 }
 
-<h4>Group Products</h4>
+
+<h2>@ViewData["GroupName"]</h2>
 
 <div class=" container">
 
     <div class="row">
         @foreach (var item in Model)
         {
-            <div class="col-md-4 col-lg-3 mb-4">
+            <div class="col-md-4 mb-4">
                 <partial name="_ProductBox" model="item"></partial>
             </div>
         }
     </div>
    
 </div>
+
+
+
 
