--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,9 +28,10 @@
                         </li>
                         <li>
                            <partial name="_Groups"></partial>
-
                         </li>
-
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register"> Register</a>
+                        </li>
 
                     </ul>
                 </div>
@@ -50,7 +51,6 @@
                 @RenderBody()
 
             </div>
-
 
         </div>
 
