--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,8 +2,9 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">NeoStore</h1>
+<h2>All Products</h2>
+<p></p>
+
 
     <div class="container">
         <div class="row">
@@ -19,4 +20,3 @@
 
         </div>
     </div>
-</div>
