--- a/Views/Home/ShowCart.cshtml
+++ b/Views/Home/ShowCart.cshtml
@@ -3,17 +3,17 @@
     ViewData["Title"] = "ShowCard";
 }
 
-<h1>ShowCard</h1>
+<h1>Cart Items</h1>
 
 <table class="table table table-striped">
 
     <thead class="thead-dark">
 
         <tr>
-            <th>Item</th>
-            <th>Quantity</th>
-            <th>Price</th>
-            <th>Remove</th>
+            <th style="width: 30%;">Item</th>
+            <th style="width: 25%;">Quantity</th>
+            <th style="width: 25%;">Price</th>
+            <th style="width: 10%;"></th>
         </tr>
     </thead>
 
