--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                         <li>
                            <partial name="_Groups"></partial>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item pull-left">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register"> Register</a>
                         </li>
 
