--- a/Views/Account/RegisterConfirmed.cshtml
+++ b/Views/Account/RegisterConfirmed.cshtml
@@ -1,4 +1,4 @@
-﻿@model User
+﻿@model AccountViewModel
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
@@ -10,4 +10,5 @@
 </h1>
 
 <h4>Youe username is: @Model.Email</h4>
+
 
