--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,9 +29,32 @@
                         <li>
                            <partial name="_Groups"></partial>
                         </li>
-                        <li class="nav-item pull-left">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register"> Register</a>
-                        </li>
+
+                        @if(User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item pull-left">
+                                <a class="nav-link text-dark" > Wellcome @User.Identity.Name</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a>
+                            </li>
+
+                            
+                        }
+                        else
+                        {
+                            <li class="nav-item pull-left">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register"> Register</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+                            </li>
+                            
+                        }
+
+
+                     
+
 
                     </ul>
                 </div>
