--- a/Pages/Admin/Index.cshtml
+++ b/Pages/Admin/Index.cshtml
@@ -11,6 +11,53 @@
     <a asp-page="/Admin/Add">Add new product</a>
 </p>
 
+
+<table>
+    <thead>
+        <tr>
+            <th></th>
+        </tr>
+
+    </thead>
+    <tbody>
+        @foreach(var product in Model.Products)
+        {
+            <tr>
+                <distributed-cache-image src="~/images/@(product.Id).jpg"
+                                         style="max-width: 50px; border: 3px solid blue" />
+                <td>@product.Name</td>
+                <td>@product.Item.Price</td>
+                <td>@product.Name</td>
+            </tr>
+        }
+        
+
+    </tbody>
+
+
+
+    <tr>
+        <td></td>
+    </tr>
+</table>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <table>
     <thead>
         <tr>
