--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewBag.Title</title>
     <link href="~/css/admin.css" rel="stylesheet" />
 </head>
-<body>
+<body dir="ltr">
     <header>
         <a href="/">Admin</a>
     </header>
